# aigon-cli

./: .gitignore  README.md  build_zipapp.sh  pyproject.toml
.github/workflows/: release.yml
_scripts/: structural_lint.py
aigon_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  crypto.py  download.py  event.py  filedb.py  fileserver.py  llm.py  notetaker.py  report.py  requests_shim.py  search.py  tz.py  version.py  vtt2md.py
tests/: __init__.py  test_0_crypto.py  test_1_requests_shim.py  test_1_restapi_cli.py  test_2_cli_functionality.py  test_3_sanitization.py  test_4_fileserver.py  test_llmhelp_content.py
tests/utils/: __init__.py  signature_test_helpers.py
