[project]
name = "aigon-cli"
# KEEP IN SYNC with aigon_cli/version.py __version__
version = "0.24"
description = "Command-line interface for the Aigon AI assistant ecosystem"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
aigon = "aigon_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
