[project]
name = "aigon-cli"
# KEEP IN SYNC with aigon_cli/version.py __version__
version = "0.25"
description = "Command-line interface for the Aigon AI assistant ecosystem"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
aigon = "aigon_cli.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["aigon_cli/vendored/"]

[tool.ruff.lint]
external = [
    "VERSION_SYNC",        # structural_lint.py
]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common pitfalls)
]
ignore = [
    "E501",   # line length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["aigon_cli"]

[tool.ruff.format]
quote-style = "double"
